// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test subject reducer should add new subject 1`] = `
Object {
  "abbreviation": "abbreviation",
  "data": Array [
    Object {
      "_id": "lpfC4fTZERCjwfNo",
      "abbreviation": "MATH101",
      "classroomId": "qPtCHoVmf2Tbznji",
      "createdAt": Object {
        "$$date": 1556465049016,
      },
      "name": "Mathematics",
      "room": "Room 2",
      "tests": Array [],
      "updatedAt": Object {
        "$$date": 1556465049016,
      },
    },
  ],
  "name": "name",
  "openModal": false,
  "subject": null,
}
`;

exports[`test subject reducer should get sinlge subject 1`] = `
Object {
  "abbreviation": "abbreviation",
  "name": "name",
  "openModal": false,
  "subject": "Mathematics",
}
`;

exports[`test subject reducer should get subject list 1`] = `
Object {
  "abbreviation": "abbreviation",
  "data": Array [
    Object {
      "_id": "qGK99ne2xYjkW4cp",
      "abbreviation": "BIO101",
      "classroomId": "qPtCHoVmf2Tbznji",
      "createdAt": Object {
        "$$date": 1534404077665,
      },
      "name": "Biology",
      "room": "Room 2",
      "tests": Array [],
      "updatedAt": Object {
        "$$date": 15544404096125,
      },
    },
    Object {
      "_id": "upGQBZVHHM4J1Tam",
      "abbreviation": "ENG101",
      "classroomId": "qPtCHnohVmf2Tbznji",
      "createdAt": Object {
        "$$date": 1555383021646,
      },
      "name": "English",
      "room": "Room 2",
      "tests": Array [],
      "updatedAt": Object {
        "$$date": 1553871237090,
      },
    },
  ],
  "name": "name",
  "openModal": false,
  "subject": null,
}
`;

exports[`test subject reducer should update subject list 1`] = `
Object {
  "abbreviation": "abbreviation",
  "name": "name",
  "openModal": true,
  "subject": "Science",
}
`;

exports[`test subject reducer should use default class state 1`] = `
Object {
  "abbreviation": "abbreviation",
  "name": "name",
  "openModal": false,
  "subject": null,
}
`;

exports[`test subject reducer should use default subject state 1`] = `
Object {
  "abbreviation": "abbreviation",
  "name": "name",
  "openModal": false,
  "subject": null,
}
`;
